fixed mat-menu alignments

--- a/resident-ui/src/app/feature/uinservices/viewhistory/viewhistory.component.css
+++ b/resident-ui/src/app/feature/uinservices/viewhistory/viewhistory.component.css
@@ -292,6 +292,10 @@ input[dir=rtl]::placeholder {
   }
 }
 
+::ng-deep .viewHistory+.cdk-overlay-connected-position-bounding-box{
+  width:auto !important;
+}
+
 .mat-expansion-panel-header{
   padding: 0 10px;
 }
